Rename theme to Material Design, resolve #2

--- a/sass/material-admin.no-query.scss
+++ b/sass/material-admin.no-query.scss
@@ -2,4 +2,4 @@ $breakpoint-no-queries: true;
 $breakpoint-no-query-fallbacks: true;
 
 // Re-render everything from styles.scss but without media queries.
-@import "customer-admin.styles";
+@import "material-admin.styles";
