--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -19,6 +19,8 @@ $blue-700: #455ede;
 $blue-grey-100: #cfd8dc;
 
 // Greys
+$grey-50: #fafafa;
 $grey-300: #e0e0e0;
 $grey-400: #bdbdbd;
 $grey-600: #757575;
+$grey-900: #212121;
