--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -31,12 +31,12 @@
 }
 /* Animated throbber */
 html.js input.form-autocomplete {
-  background-image: image-url('misc/draggable.png');
-  background-position: 100% 2px; /* LTR */
-  background-repeat: no-repeat;
+  background-image: none;
 }
 html.js input.throbbing {
-  background-position: 100% -18px; /* LTR */
+  background-image: inline-image('misc/autocomplete.gif');
+  background-position: 99% 8px;
+  background-repeat: no-repeat;
 }
 
 /**
