Add some formatting to disabled themes.

--- a/css/material-admin.no-query.css
+++ b/css/material-admin.no-query.css
@@ -910,6 +910,21 @@ html, body {
   font-size: 0.9em;
 }
 
+.system-themes-list-disabled .theme-selector {
+  width: 50%;
+}
+
+.system-themes-list-disabled .theme-selector {
+  width: 33%;
+}
+
+.system-themes-list-disabled .theme-selector {
+  width: 25%;
+}
+.system-themes-list-disabled .theme-selector:nth-child(5n+1) {
+  clear: left;
+}
+
 ol.breadcrumb {
   margin: 0;
   padding: 0;
