--- a/sass/components/_page.scss
+++ b/sass/components/_page.scss
@@ -6,6 +6,7 @@ html, body {
   padding-bottom: 35px;
   background-color: #fafafa;
   box-shadow: 0 0 1px rgba(black, 0.2);
+  @include pie-clearfix;
 }
 .l-page__wrapper {
   width: 95%;
